Front page fixed

--- a/template/Politecnico-di-Torino-Presentation/beamerthemesintef.sty
+++ b/template/Politecnico-di-Torino-Presentation/beamerthemesintef.sty
@@ -156,7 +156,8 @@
   % Reposition the box in an inelegant way - but it works!
   \hspace{-12mm}
   \vspace{20mm}
-  \begin{beamercolorbox}[wd=0.72\textwidth,sep=10pt,leftskip=8mm]{title}%
+  %\begin{beamercolorbox}[wd=0.72\textwidth,sep=10pt,leftskip=8mm]{title}%
+  \begin{beamercolorbox}[wd=0.65\textwidth,sep=10pt,leftskip=8mm]{title}% % updated width - @eliainnocenti
   
     \vspace{0.5cm} % added - @eliainnocenti
   
