--- a/main.tex
+++ b/main.tex
@@ -17,8 +17,8 @@
 \newcommand{\hrefcol}[2]{\textcolor{cyan}{\href{#1}{#2}}}
 
 % Presentation info
-\title{Your Title Here} % TODO: update
-\subtitle{Beamer for the CAOS project}
+\title{Secure Timeout System \newline NXP S32K3X8EVB}
+\subtitle{Beamer for the CAOS Project}
 %\course{Computer Architectures and Operating Systems}
 \author{
     \newline Andrea Botticella
@@ -40,6 +40,7 @@
 %\include{sections/04-results}
 %\include{sections/05-conclusion}
 
+\title{}
 \backmatter
 
 \end{document}
