--- a/main.tex
+++ b/main.tex
@@ -30,11 +30,11 @@
 \maketitle
 
 % Include the sections of the presentation
-\input{01-overview}
-\input{02-qemu-emulation}
-\input{03-freertos-porting}
-\input{04-application}
-\input{05-conclusion}
+\input{sections/01-overview}
+\input{sections/02-qemu-emulation}
+\input{sections/03-freertos-porting}
+\input{sections/04-application}
+\input{sections/05-conclusion}
 
 \title{}
 \backmatter
