--- a/sections/05-conclusion.tex
+++ b/sections/05-conclusion.tex
@@ -2,7 +2,7 @@
 
 \begin{frame}{Conclusion}
     \begin{itemize}
-        \item The s32k3x8evb_board.c file plays a crucial role in the emulation of the NXP S32K3X8EVB board within QEMU.
+        \item The s32k3x8evb\_board.c file plays a crucial role in the emulation of the NXP S32K3X8EVB board within QEMU.
         \item It provides the necessary functions to load firmware, initialize memory regions, set up hardware components, and manage system clocks and interrupts.
         \item This detailed analysis highlights the key functionalities and their implementations, providing a comprehensive understanding of the board initialization and configuration process.
     \end{itemize}
