--- a/main.tex
+++ b/main.tex
@@ -2,20 +2,20 @@
 
 \documentclass{beamer}
 
-\usepackage{template/Politecnico-di-Torino-Presentation/beamerthemesintef} % updated path - @eliainnocenti
+\usepackage{template/Politecnico-di-Torino-Presentation/beamerthemesintef} % updated path
 \usepackage{amsfonts,amsmath,oldgerm}
 
 \usetheme{sintef}
 
 \newcommand{\testcolor}[1]{\colorbox{#1}{\textcolor{#1}{test}}~\texttt{#1}}
 \usefonttheme[onlymath]{serif}
-\titlebackground*{template/Politecnico-di-Torino-Presentation/assets/background} % updated path - @eliainnocenti
+\titlebackground*{template/Politecnico-di-Torino-Presentation/assets/background} % updated path
 \newcommand{\hrefcol}[2]{\textcolor{cyan}{\href{#1}{#2}}}
 
 % Presentation info
 \title{Secure Timeout System \newline NXP S32K3X8EVB}
 \subtitle{Beamer for the CAOS Project}
-%\course{Computer Architectures and Operating Systems}
+% \course{Computer Architectures and Operating Systems}
 \author{
     \newline Andrea Botticella
     \newline Fabrizio Emanuel 
