--- a/sections/01-overview.tex
+++ b/sections/01-overview.tex
@@ -4,27 +4,42 @@
 
 \begin{frame}{Project Overview}
     \begin{itemize}
-        \item Implement a secure timeout system application on the NXP S32K3X8EVB board using FreeRTOS, emulated with QEMU.
-        \item Divided into several parts, each focusing on different aspects of the development process.
+        \item The assignment consists of FOUR parts:
+            \begin{itemize}
+                \item \textbf{Part 1: QEMU board emulation}
+                    \begin{itemize}
+                        \item Generating a custom QEMU version to emulate the NXP S32K3X8EVB board.
+                        \item Ensuring that QEMU emulates the proper CPU, memory map, and the peripherals assigned.
+                    \end{itemize}
+                \item \textbf{Part 2: FreeRTOS porting}
+                    \begin{itemize}
+                        \item Ensuring that FreeRTOS runs on the emulated board.
+                    \end{itemize}
+                \item \textbf{Part 3: Writing a simple application}
+                    \begin{itemize}
+                        \item Writing a simple application implementing different tasks to test the setup.
+                    \end{itemize}
+            \end{itemize}
     \end{itemize}
 \end{frame}
 
-\section{Projects’ Goal}
-
-\begin{frame}{Projects’ Goal}
+\begin{frame}{Project Overview}
     \begin{itemize}
-        \item Learn how to use different technologies:
-        \begin{itemize}
-            \item QEMU to emulate a heterogeneous hardware architecture.
-            \item FreeRTOS for real-time operating system functionalities.
-        \end{itemize}
-        \item Learn how to use Git to manage a team project:
-        \begin{itemize}
-            \item Efficient collaboration and version control.
-        \end{itemize}
-        \item Learn how to present your work:
-        \begin{itemize}
-            \item Documenting and presenting the project effectively.
-        \end{itemize}
+        \item The assignment consists of FOUR parts:
+            \begin{itemize}
+                \item \textbf{Part 4: Documentation and presentation}
+                    \begin{itemize}
+                        \item Creating a tutorial to run and test your code.
+                        \item Documentation of the code.
+                    \end{itemize}
+            \end{itemize}
+        \vspace{0.1cm}
+        \item What we've actually done:
+            \begin{itemize}
+                \item \textit{Secure Timeout System} application on the \textbf{NXP S32K3X8EVB board} using \textbf{FreeRTOS}, emulated with \textbf{QEMU}.
+                \item Refer to the dedicated markdown files in the repository: \texttt{README.md} and \texttt{GUIDE.md}.
+                      These files contain all the implementation details and the tutorial to replicate the project.
+            \end{itemize}
     \end{itemize}
 \end{frame}
+
