Images move to images/

--- a/sections/04-application.tex
+++ b/sections/04-application.tex
@@ -21,11 +21,11 @@
     \end{itemize}
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{resources/images/event_task_1.png}
+        \includegraphics[width=0.75\textwidth]{images/event_task_1.png}
     \end{figure}
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{resources/images/event_task_2.png}
+        \includegraphics[width=0.75\textwidth]{images/event_task_2.png}
         \caption{Generation of a user activity and a suspicious activity.}
     \end{figure}
 \end{frame}
@@ -105,7 +105,7 @@
 \begin{frame}{Run Example}
     \begin{figure}[h]
         \centering
-        \includegraphics[width=0.75\textwidth]{resources/images/run_example.png}
+        \includegraphics[width=0.75\textwidth]{images/run_example.png}
         % \caption{Terminal log output showing event generation, activity detection, and alert handling.}
     \end{figure}
 \end{frame}
