--- a/sections/04-application.tex
+++ b/sections/04-application.tex
@@ -67,7 +67,7 @@
     \begin{itemize}
         \item \textbf{Global Variables:}
             \begin{itemize}
-                \item Four main flags:
+                \item Four main \textbf{flags}:
                     \begin{itemize}
                         \item \texttt{userActivity}, \texttt{userActivityDetection}, \\ \texttt{suspiciousActivity}, \texttt{suspiciousActivityDetection}
                     \end{itemize}
