--- a/main.tex
+++ b/main.tex
@@ -35,7 +35,6 @@
 % Presentation info
 \title{Secure Timeout System \newline NXP S32K3X8EVB}
 \subtitle{Beamer for the CAOS Project}
-% \course{Computer Architectures and Operating Systems}
 \author{
     \newline Andrea Botticella
     \newline Fabrizio Emanuel 
@@ -43,7 +42,7 @@
     \newline Renato Mignone 
     \newline Simone Romano     
 }
-% TODO: check date
+\date{February 5, 2025}
 
 % Begin document
 \begin{document}
@@ -56,7 +55,7 @@
 \input{sections/04-application}
 \input{sections/05-conclusion}
 
-\title{}
+\title{} % Reset the title to have a better backmatter visualization
 \backmatter
 
 \end{document}
