--- a/sections/03-freertos-porting.tex
+++ b/sections/03-freertos-porting.tex
@@ -25,11 +25,11 @@
     \end{enumerate}
 \end{frame}
 
-\begin{frame}{Setting Up FreeRTOS}
-    
-    % TODO: is this frame needed ?
-
-\end{frame}
+% \begin{frame}{Setting Up FreeRTOS}
+%     
+%     
+% 
+% \end{frame}
 
 \begin{frame}[fragile]{Running FreeRTOS on QEMU}
     \begin{itemize}
