--- a/sections/02-qemu-emulation.tex
+++ b/sections/02-qemu-emulation.tex
@@ -1,6 +1,6 @@
 % 02-qemu-emulation.tex
 
-\section{Part 1 - QEMU Board Emulation}
+\section{QEMU Board Emulation}
 
 \begin{frame}{Custom QEMU Version}
     \begin{itemize}
