--- a/sections/03-freertos-porting.tex
+++ b/sections/03-freertos-porting.tex
@@ -1,6 +1,6 @@
 % 03-freertos-porting.tex
 
-\section{Part 2 - FreeRTOS Porting}
+\section{FreeRTOS Porting}
 
 \begin{frame}{Overview}
     \begin{itemize}
