--- a/sections/04-application.tex
+++ b/sections/04-application.tex
@@ -1,6 +1,6 @@
 % 04-application.tex
 
-\section{Part 3 - Write a Simple Application}
+\section{Test Application}
 
 \begin{frame}{Secure Timeout System Application}
     \begin{itemize}
