--- a/main.tex
+++ b/main.tex
@@ -53,7 +53,8 @@
 \input{sections/02-qemu-emulation}
 \input{sections/03-freertos-porting}
 \input{sections/04-application}
-\input{sections/05-conclusion}
+\input{sections/05-mpu}
+\input{sections/06-conclusion}
 
 \title{} % Reset the title to have a better backmatter visualization
 \backmatter
